--- a/concept-area-depth.adoc
+++ b/concept-area-depth.adoc
@@ -1,3 +1,5 @@
+:concept-area-depth: 📦 Surface area and depth
+
 [.columns]
 = Surface area
 
@@ -29,7 +31,7 @@ That's a job for...
 --
 
 [.columns]
-== Surface area and depth
+== {concept-area-depth}
 
 [.column.is-one-third]
 --
@@ -54,7 +56,7 @@ depth refers to how much work is done by exported components in the package.
 In combination, these represent the functionality offered by the package.
 --
 
-== Surface area and depth
+== {concept-area-depth}
 
 [pikchr, width=50%]
 ....
@@ -86,7 +88,7 @@ However...
 --
 
 [.columns.wrap]
-== Surface area and depth
+== {concept-area-depth}
 
 [.column.is-half]
 --
