drop the tangents
There's no time even if I want to talk about initialization.

--- a/expand.adoc
+++ b/expand.adoc
@@ -64,4 +64,4 @@ So to summarize, to plan for expansion:
 ** returning structs and adding methods to them
 --
 
-include::side-initialize.adoc[]
+// include::side-initialize.adoc[]
